Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12323

save_stack_trace_tsk is not exported on arm architectures

XMLWordPrintable

    • 3
    • 9223372036854775807

      libcfs module needs save_stack_trace_tsk symbol:

      nm libcfs.ko | grep save_stack_trace_tsk
                       U save_stack_trace_tsk
      

      Added in 2.12 commit:

      commit afedf9343686504c89f2e28cf6133540166f2347
      Author: Yang Sheng <ys@whamcloud.com>
      Date:   Wed Aug 8 00:24:19 2018 +0800
      
          LU-11062 libcfs: use save_stack_trace for stack dump
      

      However, this symbol is not exported on arm architectures:

      *hornc@cflosbld09 sle-cray $ grep save_stack_trace_tsk ./arch/arm{,64}/kernel/stacktrace.c | grep EXPORT
      *hornc@cflosbld09 sle-cray $
      

      In the above excerpt I'm checking the SLES 15 4.12.14-25.22 kernel. I'm not yet aware of any other kernels where arm architectures export this symbol.

            ys Yang Sheng
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: